Fix separators not showing up on some browsers.
git-svn-id: http://svn.omploader.org/trunk/omploader@99 f3e9fb10-4bd1-4be2-8a77-beb9a613051d

--- a/_style.css
+++ b/_style.css
@@ -45,6 +45,10 @@ br.clear {
 	clear: both;
 }
 
+span.separator {
+	font-weight: normal;
+}
+
 div#header {
 	margin: 10px 0 20px 0;
 }
